@@ -1,3 +1,10 @@
+2012-04-19  Yao Qi  <yao@codesourcery.com>
+
+	* remote-utils.c (prepare_resume_reply): Replace with macro
+	target_core_of_thread.
+	* server.c (handle_qxfer_threads_proper): Likewise.
+	* target.h (traget_core_of_thread): New macro.
+
 2012-04-16  Yao Qi  <yao@codesourcery.com>
 
 	* tracepoint.c (cmd_qtstart): Download tracepoints even when they are
